Worked on developing the quiz

--- a/css/lesson_style.css
+++ b/css/lesson_style.css
@@ -2,7 +2,6 @@ body{
     background: rgba(202, 208, 214, 0.76);
 }
 
-
 .box{
     padding: 40px 0px;
 }
@@ -32,6 +31,8 @@ table, td{
     border-style:solid;
     text-align: center;
   }
-#Container{
-    align-content: center
+
+#start:hover{
+    border: 3px solid lightgreen;
+    color : blue;
 }
