--- a/css/login_style.css
+++ b/css/login_style.css
@@ -1,5 +1,5 @@
 body{
-    background-color: greenyellow;
+    background-color: rgba(202, 208, 214, 0.76);
     background-size: cover;
     background-position: center;
 }
