--- a/templates/about.html
+++ b/templates/about.html
@@ -1,27 +1,30 @@
+<!DOCTYPE html>
+<html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-compatible" content="ie=edge">
-    <link rel="icon" href="images/favicon.PNG">
+    <link rel="icon" href="{{ url_for('static', filename='images/favicon.PNG') }}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/about_style.css">
-    <link rel="stylesheet" href="navbar/nav_style.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/about_style.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='navbar/nav_style.css') }}">
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 
     <title>About | ElementLabs</title>
     <meta name="description" content="learn about our work here at ElementLabs, our main goal is the spread of scientific knowledge to the next generations scientists">
 </head>
 
-<body>
-    <div id="nav-placeholder"></div>
-    <script>
-      $(function(){
-        $("#nav-placeholder").load("navbar/nav.html");
-      });
-    </script>
-  
-    
-    <p> about </p>
 
+<body>
+  <div id="nav-placeholder"></div>
+  <script>
+      $(function() {
+          $("#nav-placeholder").load("{{ url_for('nav')}}");
+      });
+  </script>
+  
+  <p> about </p>
 </body>
+</html>
