--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -1,4 +1,24 @@
 
+<!DOCTYPE html>
+<html lang="en">
+    
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-compatible" content="ie=edge">
+        <link rel="icon" href="images/favicon.PNG">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" 
+        integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+        <link rel="stylesheet" href="/../css/index_style.css">
+        <link rel="stylesheet" href="/../navbar/nav_style.css">
+        <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+    
+        <title>Learn Chemistry | ElementLabs</title>
+        <meta name="description" content="learn and test your knowledge of elements">
+    </head>
+
+    <body>
+        
 <div class="container">
     <nav class="navbar navbar-expand-lg navbar-light">
 
@@ -33,3 +53,9 @@
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" 
 integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+
+      
+        
+        <p> home </p>
+      </body>
+ </html>
