adjusted the connection with each of the pages

--- a/templates/lessons.html
+++ b/templates/lessons.html
@@ -45,7 +45,7 @@
                                 <span>question1</span>
                             </div>
 
-                            <a href="Hydrogen.html">Continue to Lesson</a>
+                            <a href="{{ url_for('Hydrogen')}}">Continue to Lesson</a>
 
                         </div>
                     </div>
@@ -64,7 +64,7 @@
                                 <span>question2</span>
                             </div>
 
-                            <a href="oxygen.html">Continue to Lesson</a>
+                            <a href="{{ url_for('oxygen')}}">Continue to Lesson</a>
 
                         </div>
                     </div>
@@ -83,7 +83,7 @@
                                 <span>question3</span>
                             </div>
 
-                            <a href="helium.html">Continue to Lesson</a>
+                            <a href="{{ url_for('helium')}}">Continue to Lesson</a>
 
                         </div>
                     </div>
@@ -102,7 +102,7 @@
                                 <span>question4</span>
                             </div>
 
-                            <a href="carbon.html">Continue to Lesson</a>
+                            <a href="{{ url_for('carbon')}}">Continue to Lesson</a>
 
                         </div>
                     </div>
@@ -121,7 +121,7 @@
                                 <span>question5</span>
                             </div>
 
-                            <a href="nitrogen.html">Continue to Lesson</a>
+                            <a href="{{ url_for('nitrogen')}}">Continue to Lesson</a>
 
                         </div>
                     </div>
@@ -140,7 +140,7 @@
                                 <span>question6</span>
                             </div>
 
-                            <a href="iron.html">Continue to Lesson</a>
+                            <a href="{{ url_for('iron')}}">Continue to Lesson</a>
 
                         </div>
                     </div>
