--- a/templates/Hydrogen.html
+++ b/templates/Hydrogen.html
@@ -7,8 +7,8 @@
         <link rel="icon" href="images/favicon.PNG">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" 
         integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-        <link rel="stylesheet" href="css/lesson_style.css">
-        <link rel="stylesheet" href="navbar/nav_style.css">
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/lesson_style.css') }}">
+        <link rel="stylesheet" href="{{ url_for('static', filename='navbar/nav_style.css') }}">
         <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 
         <title>Chemistry Lessons | ElementLabs</title>
@@ -88,7 +88,7 @@
             <p>Congrats on Finishing this lesson on Hydrogren</p>
             <div id="displayGrade"></div>
         </div>
-        <script src="QuizCode/quiz_hydrogen.js"></script>
+        <script src="{{ url_for('static', filename='QuizCode/quiz_hydrogen.js') }}"></script>
 
     </body>
 </html>
