--- a/templates/nav.html
+++ b/templates/nav.html
@@ -25,7 +25,7 @@
         </div>
         <div class="wrapperRight ms-auto">
           <ul class="navbar-nav">
-            <li><a class="nav-link" href="login.html">Login/Sign up</a></li>
+            <li><a class="nav-link" href="{{ url_for('login')}}">Login/Sign up</a></li>
           </ul>
         </div>
       </div>
