--- a/static/css/index_style.css
+++ b/static/css/index_style.css
@@ -6,3 +6,63 @@ body {
     margin: 0;
     padding: 0;
 }
+
+#title-placeholder{
+    text-align: center;
+    padding: 25px;
+}
+
+#intro-placeholder{
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+    font-size: 20px;
+}
+
+lo{
+    border: black 2px;
+    padding: 10px;
+    background-color: lightgray;
+    font-size: 20px;
+}
+
+table{
+    text-align: center;
+    font-size: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    padding:10px;
+}
+tr, td{
+    padding:5px;
+}
+#H,#C,#N,#O,#F,#P,#S,#Cl,#Se,#Br,#I{
+    background-color: lightgreen;
+}
+#Li,#Na,#K,#Rb,#Cs,#Fr{
+    background-color: red;
+}
+#Be,#Mg,#Ca,#Sr,#Ba,#Ra{
+    background-color: orange;
+}
+#B,#Si,#Ge,#As,#Sb,#Te,#At{
+    background-color: yellow;
+}
+#He,#Ne,#Ar,#Kr,#Xe,#Rn{
+    background-color: pink;
+}
+#Sc,#Ti,#V,#Cr,#Mn,#Fe,#Co,#Ni,#Cu,#Y,#Zr,#Nb,#Mo,#Tc,#Ru,#Rh,#Pd,#Ag,#Hf,#Ta,#W,#Re,#Os,#Ir,#Pt,#Au,#Rf,#Db,#Sg,#Bh,#Hs{
+    background-color: lightblue;
+}
+#Mt,#Ds,#Rg,#Nh,#Fl,#Mc,#Lv,#Ts,#Og{
+    background-color: grey;
+}
+#Al,#Zn,#Ga,#Cd,#In,#Sn,#Hg,#Tl,#Pb,#Bi,#Po,#Cn{
+    background-color: purple;
+}
+#La,#Ce,#Pr,#Nd,#Pm,#Sm,#Eu,#Gd,#Tb,#Dy,#Ho,#Er,#Tm,#Yb,#Lu{
+    background-color: blue;
+}
+#Ac,#Th,#Pa,#U,#Np,#Pu,#Am,#Cm,#Bk,#Cf,#Es,#Fm,#Md,#No,#Lr{
+    background-color: greenyellow;
+}
