--- a/templates/login.html
+++ b/templates/login.html
@@ -7,8 +7,8 @@
         <link rel="icon" href="images/favicon.PNG">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" 
         integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-        <link rel="stylesheet" href="css/login_style.css">
-        <link rel="stylesheet" href="navbar/nav_style.css">
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/login_style.css') }}">
+        <link rel="stylesheet" href="{{ url_for('static', filename='navbar/nav_style.css') }}">
         <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
     
         <title>Login and Registration | ElementLabs</title>
