Some small edits

--- a/templates/index.html
+++ b/templates/index.html
@@ -26,22 +26,25 @@
   </script>
   <div id="title-placeholder">
       <h1>
-          Learning Elements of the Peroidic Table
+          Learning about Elements from the Periodic Table
       </h1>
       <div id ="intro-placeholder">
         <p>
             Here you will learning basic information and some interesting facts 
-            about six elements form the peroidic table.  
+            about six elements form the peroidic table. To begin learning simply click on the lesson tab
+            in the nav above and select an element you would like to learn about. After you have read 
+            through the learning material there will be a small quiz at the bottom of the page to track 
+            your learning. Good luck and enjoying learning about elements. 
+            <ul id="elements">
+                <lo>Hydrogen (H)</lo>
+                <lo>Oxygen (O)</lo>
+                <lo>Helium (He)</lo>
+                <lo>Carbon (C)</lo>
+                <lo>Nitrogen (N)</lo>
+                <lo>Iron (Fe)</lo>
+            </ul>
         </p>
       </div>
-      <ul id="elements">
-          <lo>Hydrogen (H)</lo>
-          <lo>Oxygen (O)</lo>
-          <lo>Helium (He)</lo>
-          <lo>Carbon (C)</lo>
-          <lo>Nitrogen (N)</lo>
-          <lo>Iron (Fe)</lo>
-      </ul>
   </div>
 
   <table id="periodic">
