--- a/static/css/index_style.css
+++ b/static/css/index_style.css
@@ -17,8 +17,12 @@ body {
     margin-left: auto;
     margin-right: auto;
     font-size: 20px;
+    padding: 20px;
 }
 
+ul{
+    padding: 20px;
+}
 lo{
     border: black 2px;
     padding: 10px;
@@ -31,7 +35,6 @@ table{
     font-size: 20px;
     margin-left: auto;
     margin-right: auto;
-    padding:10px;
 }
 tr, td{
     padding:5px;
