--- a/templates/about.html
+++ b/templates/about.html
@@ -6,8 +6,7 @@
     <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-compatible" content="ie=edge">
     <link rel="icon" href="{{ url_for('static', filename='images/favicon.PNG') }}">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" 
-    integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/about_style.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='navbar/nav_style.css') }}">
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
@@ -18,13 +17,39 @@
 
 
 <body>
-  <div id="nav-placeholder"></div>
-  <script>
-      $(function() {
-          $("#nav-placeholder").load("{{ url_for('nav')}}");
-      });
-  </script>
-  
-  <p> about </p>
+    <div class="container">
+        <nav class="navbar navbar-expand-lg navbar-light">
+
+            <div class="container-fluid">
+                <a class="navbar-brand" href="index.html">
+                    <img class="logo" src="images/logo.PNG" width="50px" height=50px alt="Element Labs logo"> Element Labs</a>
+
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#toggleMobileMenu" aria-controls="toggleMobileMenu" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+                <div class="collapse navbar-collapse" id="toggleMobileMenu">
+                    <div class="wrapperMid ms-auto">
+                        <ul class="navbar-nav">
+                            <li><a class="nav-link" href="index.html">Home</a></li>
+                            <li><a class="nav-link" href="lessons.html">Lessons</a></li>
+                            <li><a class="nav-link" href="about.html">About</a></li>
+                        </ul>
+                    </div>
+                    <div class="wrapperRight ms-auto">
+                        <ul class="navbar-nav">
+                            <li><a class="nav-link" href="login.html">Login/Sign up</a></li>
+                        </ul>
+                    </div>
+                </div>
+
+            </div>
+        </nav>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+
+
+    <p> about </p>
 </body>
+
 </html>
