--- a/templates/nav.html
+++ b/templates/nav.html
@@ -2,37 +2,34 @@
 <html lang="en">
 
 <div class="container">
-  <nav class="navbar navbar-expand-lg navbar-light">
+    <nav class="navbar navbar-expand-lg navbar-light">
 
-    <div class="container-fluid">
-      <a class="navbar-brand" href="{{ url_for('index')}}">
-        <img class="logo" src="{{ url_for('static', filename='images/logo.PNG') }}" alt="Element Labs logo">
-        Element Labs</a>
-      
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-      data-bs-target="#toggleMobileMenu" aria-controls="toggleMobileMenu" 
-      aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      
-      <div class="collapse navbar-collapse" id="toggleMobileMenu"> 
-        <div class="wrapperMid ms-auto">
-          <ul class="navbar-nav">
-            <li><a class="nav-link" href="{{ url_for('index')}}">Home</a></li>
-            <li><a class="nav-link" href="{{ url_for('lessons')}}">Lessons</a></li>
-            <li><a class="nav-link" href="{{ url_for('about')}}">About</a></li>
-          </ul>
-        </div>
-        <div class="wrapperRight ms-auto">
-          <ul class="navbar-nav">
-            <li><a class="nav-link" href="{{ url_for('login')}}">Login/Sign up</a></li>
-          </ul>
-        </div>
-      </div>
+        <div class="container-fluid">
+            <a class="navbar-brand" href="index.html">
+                <img class="logo" src="images/logo.PNG" width="50px" height=50px alt="Element Labs logo"> Element Labs</a>
 
-    </div>
-  </nav>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#toggleMobileMenu" aria-controls="toggleMobileMenu" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+            <div class="collapse navbar-collapse" id="toggleMobileMenu">
+                <div class="wrapperMid ms-auto">
+                    <ul class="navbar-nav">
+                        <li><a class="nav-link" href="index.html">Home</a></li>
+                        <li><a class="nav-link" href="lessons.html">Lessons</a></li>
+                        <li><a class="nav-link" href="about.html">About</a></li>
+                    </ul>
+                </div>
+                <div class="wrapperRight ms-auto">
+                    <ul class="navbar-nav">
+                        <li><a class="nav-link" href="login.html">Login/Sign up</a></li>
+                    </ul>
+                </div>
+            </div>
+
+        </div>
+    </nav>
 </div>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" 
-integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+
 </html>
