--- a/static/css/index_style.css
+++ b/static/css/index_style.css
@@ -1,10 +1,12 @@
 * {
     box-sizing: border-box;
+
 }
 
 body {
     margin: 0;
     padding: 0;
+    background-color: rgba(202, 208, 214, 0.76);
 }
 
 #title-placeholder{
