--- a/templates/about.html
+++ b/templates/about.html
@@ -18,6 +18,12 @@
 
 
 <body>
+    <div id="nav-placeholder"></div>
+    <script>
+        $(function() {
+            $("#nav-placeholder").load("{{ url_for('nav')}}");
+        });
+    </script>
   <div id="nav-placeholder"></div>
   <script>
       $(function() {
