--- a/templates/login.html
+++ b/templates/login.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-compatible" content="ie=edge">
-        <link rel="icon" href="images/favicon.PNG">
+        <link rel="icon" href="{{ url_for('static', filename='images/favicon.PNG') }}">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" 
         integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
         <link rel="stylesheet" href="{{ url_for('static', filename='css/login_style.css') }}">
@@ -18,8 +18,8 @@
     <body>
         <div id="nav-placeholder"></div>
         <script>
-            $(function(){
-            $("#nav-placeholder").load("navbar/nav.html");
+            $(function() {
+                $("#nav-placeholder").load("{{ url_for('nav')}}");
             });
         </script>
 
