--- a/templates/login.html
+++ b/templates/login.html
@@ -25,7 +25,7 @@
 
         <div class ="login-page">
         <div class ="form">
-            <form class = "register-form">
+            <form class = "register-form" method = 'POST'>
                 <input id="username" type = "text" placeholder="User name"/>
                 <input id="password" type ="text" placeholder="Password"/>
                 <input id="email" type ="text" placeholder="Email"/>
@@ -33,7 +33,7 @@
                 <p class = "message">Already Registered? <a href="#"> Login</a></p>
             </form>
 
-            <form class="login-form">
+            <form class="login-form" method = 'POST'>
                 <input type="text" placeholder="User name"/>
                 <input type="password" placeholder="Password"/>
                 <button>Login</button>
