--- a/templates/helium.html
+++ b/templates/helium.html
@@ -89,6 +89,7 @@
         <div class="endQuizContent" id="endQuizContent" style="display: none;">
             <p>Congrats on Finishing this lesson on Hydrogren</p>
             <div id="displayGrade"></div>
+            <p id="lessonshref"><a href="{{ url_for('lessons')}}">Return to lesson page</a></p>
         </div>
         <script src="{{ url_for('static', filename='QuizCode/quiz_helium.js') }}"></script>
     </body>
