--- a/templates/about.html
+++ b/templates/about.html
@@ -6,8 +6,7 @@
     <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-compatible" content="ie=edge">
     <link rel="icon" href="{{ url_for('static', filename='images/favicon.PNG') }}">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" 
-    integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/about_style.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='navbar/nav_style.css') }}">
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
@@ -24,13 +23,58 @@
             $("#nav-placeholder").load("{{ url_for('nav')}}");
         });
     </script>
-  <div id="nav-placeholder"></div>
-  <script>
-      $(function() {
-          $("#nav-placeholder").load("{{ url_for('nav')}}");
-      });
-  </script>
-  
-  <p> about </p>
+
+    <div id="title-placeholder">
+        <p> Teaching kids worldwide about the mysteries of elements. </p>
+        <div id="intro-placeholder">
+            <p>
+                We are a group of University of Western Australia's students creating this website as an assignment to help educate children. Our goal is to help kids learn about the basics of elements in a fun and educational way. We hope to create an interactive, fun
+                and engaging way of learning.
+            </p>
+        </div>
+    </div>
+
+    <h2 style="text-align:center">The Team</h2>
+    <div class="row">
+
+        <div class="col">
+            <div class="card">
+                <img src="{{ url_for('static', filename='images/Joshua.jpg')}}" alt="John" class="center">
+                <div class="container">
+                    <h2>Joshua</h2>
+                    <p class="title">Student at UWA</p>
+                    <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+                    <p>joshua@example.com</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="col">
+            <div class="card">
+                <img src="{{ url_for('static', filename='images/Victor.jpg')}}" alt="John" class="center">
+                <div class="container">
+                    <h2>Victor</h2>
+                    <p class="title">Student at UWA</p>
+                    <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+                    <p>Victor@example.com</p>
+
+                </div>
+            </div>
+        </div>
+
+        <div class="col">
+            <div class="card">
+                <img src="{{ url_for('static', filename='images/Aditi.jpg')}}" alt="John" class="center">
+                <div class="container">
+                    <h2>Aditi</h2>
+                    <p class="title">Student at UWA</p>
+                    <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+                    <p>Aditi@example.com</p>
+
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
+
 </html>
