--- a/templates/nav.html
+++ b/templates/nav.html
@@ -18,14 +18,15 @@
       <div class="collapse navbar-collapse" id="toggleMobileMenu"> 
         <div class="wrapperMid ms-auto">
           <ul class="navbar-nav">
-            <li><a class="nav-link" href="{{ url_for('index')}}">Home</a></li>
-            <li><a class="nav-link" href="{{ url_for('lessons')}}">Lessons</a></li>
-            <li><a class="nav-link" href="{{ url_for('about')}}">About</a></li>
+            <li><a style="text-decoration:none" class="nav-link" href="{{ url_for('index')}}">Home</a></li>
+            <li><a style="text-decoration:none" class="nav-link" href="{{ url_for('lessons')}}">Lessons</a></li>
+            <li><a style="text-decoration:none" class="nav-link" href="{{ url_for('about')}}">About</a></li>
           </ul>
         </div>
         <div class="wrapperRight ms-auto">
           <ul class="navbar-nav">
-            <li><a class="nav-link" href="{{ url_for('login')}}">Login/Sign up</a></li>
+            <li><a style="text-decoration:none" class="nav-link" href="{{ url_for('login')}}">Login</a></li>
+            <li><a style="text-decoration:none" class="nav-link" href="{{ url_for('signup')}}">Sign Up</a></li>
           </ul>
         </div>
       </div>
