minor edits grammatical

--- a/templates/iron.html
+++ b/templates/iron.html
@@ -68,8 +68,8 @@
         <!-- Begining the quiz -->
         <div class="message" id="id5">
             <p id = "id2">
-                When your ready click the button below to take a test on the information you have 
-                learnt about hydrogen. The Quiz consistsof three multi choice question in which you
+                When you're ready click the button below to take a test on the information you have 
+                learnt about iron. The Quiz consists of three multi choice question in which you
                 have 10 second to answer. Best of luck!!
             </p>
         </div>
