--- a/templates/nitrogen.html
+++ b/templates/nitrogen.html
@@ -56,7 +56,7 @@
                 <ul id='id1'>
                     <li>Nitrogen plays an important role in the life of plants and animals on Earth through the nitrogen cycle.</li>
                     <li>It consists of 7 protons and 7 eletrons.</li>
-                    <li> The most common element in our air is nitrogen, not oxygen. </li>
+                    <li>The most common element in our air is nitrogen, not oxygen. </li>
                     <li>The Earth's atmosphere is 78% nitrogen gas or N2.</li>
                     <li>The primary industrial use of nitrogen is to make ammonia</li>
                     <li>Ammonia is then used to create fertilizers, nitric acid, and explosives.</li>
@@ -68,8 +68,8 @@
         <!-- Begining the quiz -->
         <div class="message" id="id5">
             <p id = "id2">
-                When your ready click the button below to take a test on the information you have 
-                learnt about hydrogen. The Quiz consistsof three multi choice question in which you
+                When you're ready click the button below to take a test on the information you have 
+                learnt about nitrogen. The Quiz consists of three multi choice question in which you
                 have 10 second to answer. Best of luck!!
             </p>
         </div>
