--- a/templates/navLogout.html
+++ b/templates/navLogout.html
@@ -25,6 +25,7 @@
         </div>
         <div class="wrapperRight ms-auto">
           <ul class="navbar-nav">
+            <li><a style="text-decoration:none" class="nav-link" href="{{ url_for('profile')}}">{{data}}</a></li>
             <li><a style="text-decoration:none" class="nav-link" href="{{ url_for('logout')}}">Logout</a></li>
           </ul>
         </div>
