trying to save data

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -28,8 +28,7 @@
         <p> Teaching kids worldwide about the mysteries of elements. </p>
         <div id="intro-placeholder">
             <p>
-                We are a group of University of Western Australia's students creating this website as an assignment to help educate children. Our goal is to help kids learn about the basics of elements in a fun and educational way. We hope to create an interactive, fun
-                and engaging way of learning.
+                {{data}}
             </p>
         </div>
     </div>
