completed result storage

--- a/templates/lessons.html
+++ b/templates/lessons.html
@@ -53,7 +53,7 @@
                                 <span>question1</span>
                             </div>
 
-                            <a href="{{ url_for('Hydrogen')}}">Continue to Lesson</a>
+                            <a href="{{ url_for('hydrogen')}}">Continue to Lesson</a>
 
                         </div>
                     </div>
