--- a/templates/profile.html
+++ b/templates/profile.html
@@ -28,8 +28,10 @@
         <p> Teaching kids worldwide about the mysteries of elements. </p>
         <div id="intro-placeholder">
             <p>
-                {{data}}
+                oxygen results = {{ oxygenResults }}
             </p>
+            <p>
+                hydrogen results = {{ hydrogenResults }}
         </div>
     </div>
 
