--- a/templates/profile.html
+++ b/templates/profile.html
@@ -24,19 +24,27 @@
         });
     </script>
 
-    <div id="title-placeholder">
-        <p> Teaching kids worldwide about the mysteries of elements. </p>
-        <div id="intro-placeholder">
-            <p>
-                oxygen results = {{ oxygenResults }}
-            </p>
-            <p>
-                hydrogen results = {{ hydrogenResults }}
+
+
+    <div class="card mx-auto profile">
+        <h5 class="card-header" style="background-color:rgb(153, 185, 183);">X's Profile</h5>
+        <div class="card-body">
+            <p><b>Username</b>: </p>
+            <p><b>Email</b>: </p>
         </div>
     </div>
-
-
-
-<h1>the stuff above is just because it using another pages css file so make a new profile_style.css</h1>
+    <div class="card mx-auto profile">
+        <h5 class="card-header" style="background-color:rgb(153, 185, 183);">Results Feedback</h5>
+        <div class="card-body">
+            <p><b>Hydrogen Quiz Results</b>: </p>
+            <p><b>Carbon Quiz Results</b>: </p>
+            <p><b>Oxygen Quiz Results</b>: </p>
+            <p><b>Helium Quiz Results</b>: </p>
+            <p><b>Iron Quiz Results</b>: </p>
+            <p><b>Nitrogen Quiz Results</b>: </p>
+            <br>
+            <p style="font-size: 20px;"><b>Congratulations on trying out the quizzes! Try to achieve 100 in all!</b> </p>
+        </div>
 </body>
+
 </html>
