--- a/templates/lessons.html
+++ b/templates/lessons.html
@@ -6,8 +6,7 @@
     <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-compatible" content="ie=edge">
     <link rel="icon" href="{{ url_for('static', filename='images/favicon.PNG') }}">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" 
-    integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/lesson_style.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='navbar/nav_style.css') }}">
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
@@ -19,143 +18,115 @@
 
 
 <body>
-  <div id="nav-placeholder"></div>
-  <script>
-      $(function() {
-          $("#nav-placeholder").load("{{ url_for('nav')}}");
-      });
-  </script>
-  
+    <div id="nav-placeholder"></div>
+    <script>
+        $(function() {
+            $("#nav-placeholder").load("{{ url_for('nav')}}");
+        });
+    </script>
+
     <div id="Progress">
         <h1>Progress Bar</h1>
-      <div id="OutsideBar">
-          <div id="InsideBar"></div>
-      </div>
+        <div id="OutsideBar">
+            <div id="InsideBar"></div>
+        </div>
     </div>
     <script src="{{ url_for('static', filename='QuizCode/progressBar.js') }}"></script>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <div class="box">
-            <div class="container">
-                <div class="row">
+    <div class="box">
+        <div class="container">
+            <div class="row">
 
-                    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
 
-                        <div class="box-part text-center">
+                    <div class="box-part text-center">
 
-                            <img class="icon" src="{{ url_for('static', filename='images/atom.svg') }}" alt="card icon">
+                        <img class="icon" src="{{ url_for('static', filename='images/atom.svg') }}" alt="card icon">
 
-                            <div class="title">
-                                <h4>Hydrogen</h4>
-                            </div>
-
-                            <div class="text">
-                                <span>question1</span>
-                            </div>
-
-                            <a href="{{ url_for('hydrogen')}}">Continue to Lesson</a>
-
+                        <div class="title">
+                            <h4>Hydrogen</h4>
                         </div>
+
+                        <a href="{{ url_for('hydrogen')}}">Continue to Lesson</a>
+
                     </div>
-
-                    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-
-                        <div class="box-part text-center">
-
-                            <img class="icon" src="{{ url_for('static', filename='images/atom.svg') }}" alt="card icon">
-
-                            <div class="title">
-                                <h4>Oxygen</h4>
-                            </div>
-
-                            <div class="text">
-                                <span>question2</span>
-                            </div>
-
-                            <a href="{{ url_for('oxygen')}}">Continue to Lesson</a>
-
-                        </div>
-                    </div>
-
-                    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-
-                        <div class="box-part text-center">
-
-                            <img class="icon" src="{{ url_for('static', filename='images/atom.svg') }}" alt="card icon">
-
-                            <div class="title">
-                                <h4>Helium</h4>
-                            </div>
-
-                            <div class="text">
-                                <span>question3</span>
-                            </div>
-
-                            <a href="{{ url_for('helium')}}">Continue to Lesson</a>
-
-                        </div>
-                    </div>
-
-                    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-
-                        <div class="box-part text-center">
-
-                            <img class="icon" src="{{ url_for('static', filename='images/atom.svg') }}" alt="card icon">
-
-                            <div class="title">
-                                <h4>Carbon</h4>
-                            </div>
-
-                            <div class="text">
-                                <span>question4</span>
-                            </div>
-
-                            <a href="{{ url_for('carbon')}}">Continue to Lesson</a>
-
-                        </div>
-                    </div>
-
-                    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-
-                        <div class="box-part text-center">
-
-                            <img class="icon" src="{{ url_for('static', filename='images/atom.svg') }}" alt="card icon">
-
-                            <div class="title">
-                                <h4>Nitrogen</h4>
-                            </div>
-
-                            <div class="text">
-                                <span>question5</span>
-                            </div>
-
-                            <a href="{{ url_for('nitrogen')}}">Continue to Lesson</a>
-
-                        </div>
-                    </div>
-
-                    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-
-                        <div class="box-part text-center">
-
-                            <img class="icon" src="{{ url_for('static', filename='images/atom.svg') }}" alt="card icon">
-
-                            <div class="title">
-                                <h4>Iron</h4>
-                            </div>
-
-                            <div class="text">
-                                <span>question6</span>
-                            </div>
-
-                            <a href="{{ url_for('iron')}}">Continue to Lesson</a>
-
-                        </div>
-                    </div>
-
                 </div>
+
+                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+
+                    <div class="box-part text-center">
+
+                        <img class="icon" src="{{ url_for('static', filename='images/atom.svg') }}" alt="card icon">
+
+                        <div class="title">
+                            <h4>Oxygen</h4>
+                        </div>
+
+                        <a href="{{ url_for('oxygen')}}">Continue to Lesson</a>
+
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+
+                    <div class="box-part text-center">
+
+                        <img class="icon" src="{{ url_for('static', filename='images/atom.svg') }}" alt="card icon">
+
+                        <div class="title">
+                            <h4>Helium</h4>
+                        </div>
+
+                        <a href="{{ url_for('helium')}}">Continue to Lesson</a>
+
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+
+                    <div class="box-part text-center">
+
+                        <img class="icon" src="{{ url_for('static', filename='images/atom.svg') }}" alt="card icon">
+
+                        <a href="{{ url_for('carbon')}}">Continue to Lesson</a>
+
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+
+                    <div class="box-part text-center">
+
+                        <img class="icon" src="{{ url_for('static', filename='images/atom.svg') }}" alt="card icon">
+
+                        <div class="title">
+                            <h4>Nitrogen</h4>
+                        </div>
+
+                        <a href="{{ url_for('nitrogen')}}">Continue to Lesson</a>
+
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+
+                    <div class="box-part text-center">
+
+                        <img class="icon" src="{{ url_for('static', filename='images/atom.svg') }}" alt="card icon">
+
+                        <div class="title">
+                            <h4>Iron</h4>
+                        </div>
+                        <a href="{{ url_for('iron')}}">Continue to Lesson</a>
+
+                    </div>
+                </div>
+
             </div>
         </div>
+    </div>
 
-    </body>
+</body>
+
 </html>
