--- a/templates/lessons.html
+++ b/templates/lessons.html
@@ -42,7 +42,7 @@
 
                     <div class="box-part text-center">
 
-                        <img class="icon" src="{{ url_for('static', filename='images/atom.svg') }}" alt="card icon">
+                        <img src="{{ url_for('static', filename='images/hydrogen.jpg') }}" alt="card icon" height="100" width="100">
 
                         <div class="title">
                             <h4>Hydrogen</h4>
@@ -88,6 +88,10 @@
                     <div class="box-part text-center">
 
                         <img class="icon" src="{{ url_for('static', filename='images/atom.svg') }}" alt="card icon">
+
+                        <div class="title">
+                            <h4>Carbon</h4>
+                        </div>
 
                         <a href="{{ url_for('carbon')}}">Continue to Lesson</a>
 
