Added pics for element icons

--- a/templates/lessons.html
+++ b/templates/lessons.html
@@ -42,7 +42,7 @@
 
                     <div class="box-part text-center">
 
-                        <img src="{{ url_for('static', filename='images/hydrogen.jpg') }}" alt="card icon" height="100" width="100">
+                        <img src="{{ url_for('static', filename='images/Hydrogen.PNG') }}" alt="card icon" height="100" width="100">
 
                         <div class="title">
                             <h4>Hydrogen</h4>
@@ -57,7 +57,7 @@
 
                     <div class="box-part text-center">
 
-                        <img class="icon" src="{{ url_for('static', filename='images/atom.svg') }}" alt="card icon">
+                        <img src="{{ url_for('static', filename='images/Oxygen.PNG') }}" alt="card icon" height="100" width="100">
 
                         <div class="title">
                             <h4>Oxygen</h4>
@@ -72,7 +72,7 @@
 
                     <div class="box-part text-center">
 
-                        <img class="icon" src="{{ url_for('static', filename='images/atom.svg') }}" alt="card icon">
+                        <img src="{{ url_for('static', filename='images/Helium.PNG') }}" alt="card icon" height="100" width="100">
 
                         <div class="title">
                             <h4>Helium</h4>
@@ -87,7 +87,7 @@
 
                     <div class="box-part text-center">
 
-                        <img class="icon" src="{{ url_for('static', filename='images/atom.svg') }}" alt="card icon">
+                        <img src="{{ url_for('static', filename='images/Carbon.PNG') }}" alt="card icon" height="100" width="100">
 
                         <div class="title">
                             <h4>Carbon</h4>
@@ -102,7 +102,7 @@
 
                     <div class="box-part text-center">
 
-                        <img class="icon" src="{{ url_for('static', filename='images/atom.svg') }}" alt="card icon">
+                        <img src="{{ url_for('static', filename='images/Nitrogen.PNG') }}" alt="card icon" height="100" width="100">
 
                         <div class="title">
                             <h4>Nitrogen</h4>
@@ -117,7 +117,7 @@
 
                     <div class="box-part text-center">
 
-                        <img class="icon" src="{{ url_for('static', filename='images/atom.svg') }}" alt="card icon">
+                        <img src="{{ url_for('static', filename='images/Iron.PNG') }}" alt="card icon" height="100" width="100">
 
                         <div class="title">
                             <h4>Iron</h4>
