--- a/templates/oxygen.html
+++ b/templates/oxygen.html
@@ -22,7 +22,7 @@
             $("#nav-placeholder").load("{{ url_for('nav')}}");
         });
     </script>
-    <div class="lessonHeader">
+    <div class="lessonHeader" style=background-color:mediumseagreen>
         <h1><b>Oxygen</b></h1>
     </div>
     <table id="id3">
