--- a/templates/carbon.html
+++ b/templates/carbon.html
@@ -1,96 +1,96 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-compatible" content="ie=edge">
-        <link rel="icon" href="{{ url_for('static', filename='images/favicon.PNG') }}">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-        <link rel="stylesheet" href="{{ url_for('static', filename='css/lesson_style.css') }}">
-        <link rel="stylesheet" href="{{ url_for('static', filename='navbar/nav_style.css') }}">
-        <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 
-        <title>Chemistry Lessons | ElementLabs</title>
-        <meta name="description" content="learn and test your knowledge of elements">
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-compatible" content="ie=edge">
+    <link rel="icon" href="{{ url_for('static', filename='images/favicon.PNG') }}">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/lesson_style.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='navbar/nav_style.css') }}">
+    <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 
-    <body>
-        <div id="nav-placeholder"></div>
-        <script>
-            $(function() {
-                $("#nav-placeholder").load("{{ url_for('nav')}}");
-            });
-        </script>
-        <div class="lessonHeader">
-            <h1><b>Carbon</b></h1>
-        </div>
-        <table id="id3">
-            <tr>
-                <td>Symbol</td>
-                <td> C </td>
-            </tr>
-            <tr>
-                <td>Atom Number</td>
-                <td> 6 </td>
-            </tr>
-            <tr>
-                <td>Atom Wieght</td>
-                <td>12.011</td>
-            </tr>
-            <tr>
-                <td>Classification</td>
-                <td> A nonmetal </td>
-            </tr>
-            <tr>
-                <td>Melting Point</td>
-                <td>3550°C, 6442°F</td>
-            </tr>
-            <tr>
-                <td>Discovered by</td>
-                <td>Carbon has been known about since ancient times</td>
-            </tr>
-        </table>
-        <div class="information" id="id4">
-            <p>
-                <h2 id='id'>Facts about Carbon</h2>
-                <ul id='id1'>
-                    <li>Carbon is one of the most important elements to life on planet Earth</li>
-                    <li>It consists of 6 protons and 6 eletrons.</li>
-                    <li>It forms more compounds than any other element and forms the basis to all plant and animal life </li>
-                    <li>Carbon makes up about 18% of the human body. So if you weigh 100 pounds, your body containsaround 18 pounds of carbon.</li>
-                    <li>In its diamond allotrope, carbon is the hardest known substance in nature.</li>
-                    <li>Carbon also has the highest melting point of all the elements.</li>
-                    <li>Carbon is used in some way in most every industry in the world such as fuel in the form of coal, methane gas, and crude oil.</li>
-                    <li>It is known to form nearly 10 million different compounds.</li>
-                </ul>
-            </p>
-        </div>
-        <!-- Begining the quiz -->
-        <div class="message" id="id5">
-            <p id = "id2">
-                When you're ready click the button below to take a test on the information you have 
-                learnt about carbon. The Quiz consists of three multi choice question in which you
-                have 10 second to answer. Best of luck!!
-            </p>
-        </div>
+    <title>Chemistry Lessons | ElementLabs</title>
+    <meta name="description" content="learn and test your knowledge of elements">
+</head>
 
-        <!-- Creating the Quiz-->
-        <div class="quizDiv" id="quizDiv">
-            <button id="start" onclick="startQuiz()">Start Quiz!</button>
+<body>
+    <div id="nav-placeholder"></div>
+    <script>
+        $(function() {
+            $("#nav-placeholder").load("{{ url_for('nav')}}");
+        });
+    </script>
+    <div class="lessonHeader" style=background-color:lightslategrey>
+        <h1><b>Carbon</b></h1>
+    </div>
+    <table id="id3">
+        <tr>
+            <td>Symbol</td>
+            <td> C </td>
+        </tr>
+        <tr>
+            <td>Atom Number</td>
+            <td> 6 </td>
+        </tr>
+        <tr>
+            <td>Atom Wieght</td>
+            <td>12.011</td>
+        </tr>
+        <tr>
+            <td>Classification</td>
+            <td> A nonmetal </td>
+        </tr>
+        <tr>
+            <td>Melting Point</td>
+            <td>3550°C, 6442°F</td>
+        </tr>
+        <tr>
+            <td>Discovered by</td>
+            <td>Carbon has been known about since ancient times</td>
+        </tr>
+    </table>
+    <div class="information" id="id4">
+        <p>
+            <h2 id='id'>Facts about Carbon</h2>
+            <ul id='id1'>
+                <li>Carbon is one of the most important elements to life on planet Earth</li>
+                <li>It consists of 6 protons and 6 eletrons.</li>
+                <li>It forms more compounds than any other element and forms the basis to all plant and animal life </li>
+                <li>Carbon makes up about 18% of the human body. So if you weigh 100 pounds, your body containsaround 18 pounds of carbon.</li>
+                <li>In its diamond allotrope, carbon is the hardest known substance in nature.</li>
+                <li>Carbon also has the highest melting point of all the elements.</li>
+                <li>Carbon is used in some way in most every industry in the world such as fuel in the form of coal, methane gas, and crude oil.</li>
+                <li>It is known to form nearly 10 million different compounds.</li>
+            </ul>
+        </p>
+    </div>
+    <!-- Begining the quiz -->
+    <div class="message" id="id5">
+        <p id="id2">
+            When you're ready click the button below to take a test on the information you have learnt about carbon. The Quiz consists of three multi choice question in which you have 10 second to answer. Best of luck!!
+        </p>
+    </div>
 
-            <div id ="quiz" style ="display: none;">
-                <div id="question"></div>
-                <div id="A" onclick="checkAnswer('A')"></div>
-                <div id="B" onclick="checkAnswer('B')"></div>
-                <div id="C" onclick="checkAnswer('C')"></div>
-                <div id="score"></div>
-            </div>
+    <!-- Creating the Quiz-->
+    <div class="quizDiv" id="quizDiv">
+        <button id="start" onclick="startQuiz()">Start Quiz!</button>
+
+        <div id="quiz" style="display: none;">
+            <div id="question"></div>
+            <div id="A" onclick="checkAnswer('A')"></div>
+            <div id="B" onclick="checkAnswer('B')"></div>
+            <div id="C" onclick="checkAnswer('C')"></div>
+            <div id="score"></div>
         </div>
-        <div class="endQuizContent" id="endQuizContent" style="display: none;">
-            <p>Congrats on Finishing this lesson on Hydrogren</p>
-            <div id="displayGrade"></div>
-            <p id="lessonshref"><a href="{{ url_for('lessons')}}">Return to lesson page</a></p>
-        </div>
-        <script src="{{ url_for('static', filename='QuizCode/quiz_carbon.js') }}"></script>
-    </body>
+    </div>
+    <div class="endQuizContent" id="endQuizContent" style="display: none;">
+        <p>Congrats on Finishing this lesson on Hydrogren</p>
+        <div id="displayGrade"></div>
+        <p id="lessonshref"><a href="{{ url_for('lessons')}}">Return to lesson page</a></p>
+    </div>
+    <script src="{{ url_for('static', filename='QuizCode/quiz_carbon.js') }}"></script>
+</body>
+
 </html>
