--- a/templates/helium.html
+++ b/templates/helium.html
@@ -1,96 +1,96 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-compatible" content="ie=edge">
-        <link rel="icon" href="{{ url_for('static', filename='images/favicon.PNG') }}">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-        <link rel="stylesheet" href="{{ url_for('static', filename='css/lesson_style.css') }}">
-        <link rel="stylesheet" href="{{ url_for('static', filename='navbar/nav_style.css') }}">
-        <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 
-        <title>Chemistry Lessons | ElementLabs</title>
-        <meta name="description" content="learn and test your knowledge of elements">
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-compatible" content="ie=edge">
+    <link rel="icon" href="{{ url_for('static', filename='images/favicon.PNG') }}">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/lesson_style.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='navbar/nav_style.css') }}">
+    <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 
-    <body>
-        <div id="nav-placeholder"></div>
-        <script>
-            $(function() {
-                $("#nav-placeholder").load("{{ url_for('nav')}}");
-            });
-        </script>
-        <div class="lessonHeader">
-            <h1><b>Helium</b></h1>
-        </div>
-        <table id="id3">
-            <tr>
-                <td>Symbol</td>
-                <td> He </td>
-            </tr>
-            <tr>
-                <td>Atom Number</td>
-                <td> 2 </td>
-            </tr>
-            <tr>
-                <td>Atom Wieght</td>
-                <td>4.0026</td>
-            </tr>
-            <tr>
-                <td>Classification</td>
-                <td> A noble gas and a nonmetal </td>
-            </tr>
-            <tr>
-                <td>Melting Point</td>
-                <td>-272.20°C, -457.96°F.</td>
-            </tr>
-            <tr>
-                <td>Discovered by</td>
-                <td>Pierre Janssen in 1868</td>
-            </tr>
-        </table>
-        <div class="information" id="id4">
-            <p>
-                <h2 id='id'>Facts about Helium</h2>
-                <ul id='id1'>
-                    <li>Helium is the second lightest and second most common element in the universe.</li>
-                    <li>It consists of 2 protons and 2 eletrons.</li>
-                    <li>Helium is the only element that does not solidify under ordinary pressures and remains a liquid even at absolute zero. </li>
-                    <li>It is rare on earth and so there is little on the Earth's atmosphere because it is so light that it eventually escapes into outer space</li>
-                    <li> Scientists believe that most of the helium in the universe was created at the formation of the universe.</li>
-                    <li>Helium is constantly being produced at the internal cores of stars.</li>
-                    <li>Helium is used in balloons and airships to make them float.</li>
-                    <li>It is not as light at hydrogen, but is a much safer gas as hydrogen is very flammable.</li>
-                </ul>
-            </p>
-        </div>
-        <!-- Begining the quiz -->
-        <div class="message" id="id5">
-            <p id = "id2">
-                When you're ready click the button below to take a test on the information you have 
-                learnt about helium. The Quiz consist of three multi choice question in which you
-                have 10 second to answer. Best of luck!!
-            </p>
-        </div>
+    <title>Chemistry Lessons | ElementLabs</title>
+    <meta name="description" content="learn and test your knowledge of elements">
+</head>
 
-        <!-- Creating the Quiz-->
-        <div class="quizDiv" id="quizDiv">
-            <button id="start" onclick="startQuiz()">Start Quiz!</button>
+<body>
+    <div id="nav-placeholder"></div>
+    <script>
+        $(function() {
+            $("#nav-placeholder").load("{{ url_for('nav')}}");
+        });
+    </script>
+    <div class="lessonHeader" style=background-color:khaki>
+        <h1><b>Helium</b></h1>
+    </div>
+    <table id="id3">
+        <tr>
+            <td>Symbol</td>
+            <td> He </td>
+        </tr>
+        <tr>
+            <td>Atom Number</td>
+            <td> 2 </td>
+        </tr>
+        <tr>
+            <td>Atom Wieght</td>
+            <td>4.0026</td>
+        </tr>
+        <tr>
+            <td>Classification</td>
+            <td> A noble gas and a nonmetal </td>
+        </tr>
+        <tr>
+            <td>Melting Point</td>
+            <td>-272.20°C, -457.96°F.</td>
+        </tr>
+        <tr>
+            <td>Discovered by</td>
+            <td>Pierre Janssen in 1868</td>
+        </tr>
+    </table>
+    <div class="information" id="id4">
+        <p>
+            <h2 id='id'>Facts about Helium</h2>
+            <ul id='id1'>
+                <li>Helium is the second lightest and second most common element in the universe.</li>
+                <li>It consists of 2 protons and 2 eletrons.</li>
+                <li>Helium is the only element that does not solidify under ordinary pressures and remains a liquid even at absolute zero. </li>
+                <li>It is rare on earth and so there is little on the Earth's atmosphere because it is so light that it eventually escapes into outer space</li>
+                <li> Scientists believe that most of the helium in the universe was created at the formation of the universe.</li>
+                <li>Helium is constantly being produced at the internal cores of stars.</li>
+                <li>Helium is used in balloons and airships to make them float.</li>
+                <li>It is not as light at hydrogen, but is a much safer gas as hydrogen is very flammable.</li>
+            </ul>
+        </p>
+    </div>
+    <!-- Begining the quiz -->
+    <div class="message" id="id5">
+        <p id="id2">
+            When you're ready click the button below to take a test on the information you have learnt about helium. The Quiz consist of three multi choice question in which you have 10 second to answer. Best of luck!!
+        </p>
+    </div>
 
-            <div id ="quiz" style ="display: none;">
-                <div id="question"></div>
-                <div id="A" onclick="checkAnswer('A')"></div>
-                <div id="B" onclick="checkAnswer('B')"></div>
-                <div id="C" onclick="checkAnswer('C')"></div>
-                <div id="score"></div>
-            </div>
+    <!-- Creating the Quiz-->
+    <div class="quizDiv" id="quizDiv">
+        <button id="start" onclick="startQuiz()">Start Quiz!</button>
+
+        <div id="quiz" style="display: none;">
+            <div id="question"></div>
+            <div id="A" onclick="checkAnswer('A')"></div>
+            <div id="B" onclick="checkAnswer('B')"></div>
+            <div id="C" onclick="checkAnswer('C')"></div>
+            <div id="score"></div>
         </div>
-        <div class="endQuizContent" id="endQuizContent" style="display: none;">
-            <p>Congrats on Finishing this lesson on Hydrogren</p>
-            <div id="displayGrade"></div>
-            <p id="lessonshref"><a href="{{ url_for('lessons')}}">Return to lesson page</a></p>
-        </div>
-        <script src="{{ url_for('static', filename='QuizCode/quiz_helium.js') }}"></script>
-    </body>
+    </div>
+    <div class="endQuizContent" id="endQuizContent" style="display: none;">
+        <p>Congrats on Finishing this lesson on Hydrogren</p>
+        <div id="displayGrade"></div>
+        <p id="lessonshref"><a href="{{ url_for('lessons')}}">Return to lesson page</a></p>
+    </div>
+    <script src="{{ url_for('static', filename='QuizCode/quiz_helium.js') }}"></script>
+</body>
+
 </html>
