--- a/templates/iron.html
+++ b/templates/iron.html
@@ -1,96 +1,96 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-compatible" content="ie=edge">
-        <link rel="icon" href="{{ url_for('static', filename='images/favicon.PNG') }}">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-        <link rel="stylesheet" href="{{ url_for('static', filename='css/lesson_style.css') }}">
-        <link rel="stylesheet" href="{{ url_for('static', filename='navbar/nav_style.css') }}">
-        <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 
-        <title>Chemistry Lessons | ElementLabs</title>
-        <meta name="description" content="learn and test your knowledge of elements">
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-compatible" content="ie=edge">
+    <link rel="icon" href="{{ url_for('static', filename='images/favicon.PNG') }}">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/lesson_style.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='navbar/nav_style.css') }}">
+    <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 
-    <body>
-        <div id="nav-placeholder"></div>
-        <script>
-            $(function() {
-                $("#nav-placeholder").load("{{ url_for('nav')}}");
-            });
-        </script>
-        <div class="lessonHeader">
-            <h1><b>Iron</b></h1>
-        </div>
-        <table id="id3">
-            <tr>
-                <td>Symbol</td>
-                <td> Fe </td>
-            </tr>
-            <tr>
-                <td>Atom Number</td>
-                <td> 26 </td>
-            </tr>
-            <tr>
-                <td>Atom Wieght</td>
-                <td>55.845</td>
-            </tr>
-            <tr>
-                <td>Classification</td>
-                <td> A transition metal </td>
-            </tr>
-            <tr>
-                <td>Melting Point</td>
-                <td>1538°C, 2800°F</td>
-            </tr>
-            <tr>
-                <td>Discovered by</td>
-                <td>Iron has been known about since ancient times</td>
-            </tr>
-        </table>
-        <div class="information" id="id4">
-            <p>
-                <h2 id='id'>Facts about Iron</h2>
-                <ul id='id1'>
-                    <li>Iron its pure form iron is a fairly soft, grayish metal. It is very reactive and will readily corrode or rust.</li>
-                    <li>It consists of 26 protons and 26 eletrons.</li>
-                    <li>Iron is the most naturally magnetic of the elements.</li>
-                    <li>Iron is the most abundant element in the Earth.</li>
-                    <li>The most important use of iron is in iron alloys which include cast iron, pig iron, wrought iron, and steel.</li>
-                    <li>Steel from iron is both inexpensive and very strong and is used in the production of all sorts of items including cars, ships, buildings, and tools.</li>
-                    <li>In the human body iron is a major component of the blood which carries oxygen throughout the body from the lungs.</li>
-                    <li>Iron is mentioned in the Book of Genesis in the Bible.</li>
-                </ul>
-            </p>
-        </div>
-        <!-- Begining the quiz -->
-        <div class="message" id="id5">
-            <p id = "id2">
-                When you're ready click the button below to take a test on the information you have 
-                learnt about iron. The Quiz consists of three multi choice question in which you
-                have 10 second to answer. Best of luck!!
-            </p>
-        </div>
+    <title>Chemistry Lessons | ElementLabs</title>
+    <meta name="description" content="learn and test your knowledge of elements">
+</head>
 
-        <!-- Creating the Quiz-->
-        <div class="quizDiv" id="quizDiv">
-            <button id="start" onclick="startQuiz()">Start Quiz!</button>
+<body>
+    <div id="nav-placeholder"></div>
+    <script>
+        $(function() {
+            $("#nav-placeholder").load("{{ url_for('nav')}}");
+        });
+    </script>
+    <div class="lessonHeader" style=background-color:peru>
+        <h1><b>Iron</b></h1>
+    </div>
+    <table id="id3">
+        <tr>
+            <td>Symbol</td>
+            <td> Fe </td>
+        </tr>
+        <tr>
+            <td>Atom Number</td>
+            <td> 26 </td>
+        </tr>
+        <tr>
+            <td>Atom Wieght</td>
+            <td>55.845</td>
+        </tr>
+        <tr>
+            <td>Classification</td>
+            <td> A transition metal </td>
+        </tr>
+        <tr>
+            <td>Melting Point</td>
+            <td>1538°C, 2800°F</td>
+        </tr>
+        <tr>
+            <td>Discovered by</td>
+            <td>Iron has been known about since ancient times</td>
+        </tr>
+    </table>
+    <div class="information" id="id4">
+        <p>
+            <h2 id='id'>Facts about Iron</h2>
+            <ul id='id1'>
+                <li>Iron its pure form iron is a fairly soft, grayish metal. It is very reactive and will readily corrode or rust.</li>
+                <li>It consists of 26 protons and 26 eletrons.</li>
+                <li>Iron is the most naturally magnetic of the elements.</li>
+                <li>Iron is the most abundant element in the Earth.</li>
+                <li>The most important use of iron is in iron alloys which include cast iron, pig iron, wrought iron, and steel.</li>
+                <li>Steel from iron is both inexpensive and very strong and is used in the production of all sorts of items including cars, ships, buildings, and tools.</li>
+                <li>In the human body iron is a major component of the blood which carries oxygen throughout the body from the lungs.</li>
+                <li>Iron is mentioned in the Book of Genesis in the Bible.</li>
+            </ul>
+        </p>
+    </div>
+    <!-- Begining the quiz -->
+    <div class="message" id="id5">
+        <p id="id2">
+            When you're ready click the button below to take a test on the information you have learnt about iron. The Quiz consists of three multi choice question in which you have 10 second to answer. Best of luck!!
+        </p>
+    </div>
 
-            <div id ="quiz" style ="display: none;">
-                <div id="question"></div>
-                <div id="A" onclick="checkAnswer('A')"></div>
-                <div id="B" onclick="checkAnswer('B')"></div>
-                <div id="C" onclick="checkAnswer('C')"></div>
-                <div id="score"></div>
-            </div>
+    <!-- Creating the Quiz-->
+    <div class="quizDiv" id="quizDiv">
+        <button id="start" onclick="startQuiz()">Start Quiz!</button>
+
+        <div id="quiz" style="display: none;">
+            <div id="question"></div>
+            <div id="A" onclick="checkAnswer('A')"></div>
+            <div id="B" onclick="checkAnswer('B')"></div>
+            <div id="C" onclick="checkAnswer('C')"></div>
+            <div id="score"></div>
         </div>
-        <div class="endQuizContent" id="endQuizContent" style="display: none;">
-            <p>Congrats on Finishing this lesson on Hydrogren</p>
-            <div id="displayGrade"></div>
-            <p id="lessonshref"><a href="{{ url_for('lessons')}}">Return to lesson page</a></p>
-        </div>
-        <script src="{{ url_for('static', filename='QuizCode/quiz_iron.js') }}"></script>
-    </body>
+    </div>
+    <div class="endQuizContent" id="endQuizContent" style="display: none;">
+        <p>Congrats on Finishing this lesson on Hydrogren</p>
+        <div id="displayGrade"></div>
+        <p id="lessonshref"><a href="{{ url_for('lessons')}}">Return to lesson page</a></p>
+    </div>
+    <script src="{{ url_for('static', filename='QuizCode/quiz_iron.js') }}"></script>
+</body>
+
 </html>
