--- a/templates/nitrogen.html
+++ b/templates/nitrogen.html
@@ -1,96 +1,96 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-compatible" content="ie=edge">
-        <link rel="icon" href="{{ url_for('static', filename='images/favicon.PNG') }}">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-        <link rel="stylesheet" href="{{ url_for('static', filename='css/lesson_style.css') }}">
-        <link rel="stylesheet" href="{{ url_for('static', filename='navbar/nav_style.css') }}">
-        <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-    
-        <title>Chemistry Lessons | ElementLabs</title>
-        <meta name="description" content="learn and test your knowledge of elements">
-    </head>
-    
-    <body>
-        <div id="nav-placeholder"></div>
-        <script>
-            $(function() {
-                $("#nav-placeholder").load("{{ url_for('nav')}}");
-            });
-        </script>
-        <div class="lessonHeader">
-            <h1><b>Nitrogen</b></h1>
-        </div>
-        <table id="id3">
-            <tr>
-                <td>Symbol</td>
-                <td> N </td>
-            </tr>
-            <tr>
-                <td>Atom Number</td>
-                <td> 7 </td>
-            </tr>
-            <tr>
-                <td>Atom Wieght</td>
-                <td>14.007</td>
-            </tr>
-            <tr>
-                <td>Classification</td>
-                <td> A nonmetal and gas </td>
-            </tr>
-            <tr>
-                <td>Melting Point</td>
-                <td>-210.00°C, -346.00°F</td>
-            </tr>
-            <tr>
-                <td>Discovered by</td>
-                <td>Daniel Rutherford in 1772</td>
-            </tr>
-        </table>
-        <div class="information" id="id4">
-            <p>
-                <h2 id='id'>Facts about Nitrogen</h2>
-                <ul id='id1'>
-                    <li>Nitrogen plays an important role in the life of plants and animals on Earth through the nitrogen cycle.</li>
-                    <li>It consists of 7 protons and 7 eletrons.</li>
-                    <li>The most common element in our air is nitrogen, not oxygen. </li>
-                    <li>The Earth's atmosphere is 78% nitrogen gas or N2.</li>
-                    <li>The primary industrial use of nitrogen is to make ammonia</li>
-                    <li>Ammonia is then used to create fertilizers, nitric acid, and explosives.</li>
-                    <li>Many explosives contain nitrogen such as TNT, nitroglycerin, and gun powder.</li>
-                    <li>Liquid nitrogen is very cold and will immediately freeze skin on contact causing severe damage and frostbite.</li>
-                </ul>
-            </p>
-        </div>
-        <!-- Begining the quiz -->
-        <div class="message" id="id5">
-            <p id = "id2">
-                When you're ready click the button below to take a test on the information you have 
-                learnt about nitrogen. The Quiz consists of three multi choice question in which you
-                have 10 second to answer. Best of luck!!
-            </p>
-        </div>
 
-        <!-- Creating the Quiz-->
-        <div class="quizDiv" id="quizDiv">
-            <button id="start" onclick="startQuiz()">Start Quiz!</button>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-compatible" content="ie=edge">
+    <link rel="icon" href="{{ url_for('static', filename='images/favicon.PNG') }}">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/lesson_style.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='navbar/nav_style.css') }}">
+    <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 
-            <div id ="quiz" style ="display: none;">
-                <div id="question"></div>
-                <div id="A" onclick="checkAnswer('A')"></div>
-                <div id="B" onclick="checkAnswer('B')"></div>
-                <div id="C" onclick="checkAnswer('C')"></div>
-                <div id="score"></div>
-            </div>
+    <title>Chemistry Lessons | ElementLabs</title>
+    <meta name="description" content="learn and test your knowledge of elements">
+</head>
+
+<body>
+    <div id="nav-placeholder"></div>
+    <script>
+        $(function() {
+            $("#nav-placeholder").load("{{ url_for('nav')}}");
+        });
+    </script>
+    <div class="lessonHeader" style=background-color:rosybrown>
+        <h1><b>Nitrogen</b></h1>
+    </div>
+    <table id="id3">
+        <tr>
+            <td>Symbol</td>
+            <td> N </td>
+        </tr>
+        <tr>
+            <td>Atom Number</td>
+            <td> 7 </td>
+        </tr>
+        <tr>
+            <td>Atom Wieght</td>
+            <td>14.007</td>
+        </tr>
+        <tr>
+            <td>Classification</td>
+            <td> A nonmetal and gas </td>
+        </tr>
+        <tr>
+            <td>Melting Point</td>
+            <td>-210.00°C, -346.00°F</td>
+        </tr>
+        <tr>
+            <td>Discovered by</td>
+            <td>Daniel Rutherford in 1772</td>
+        </tr>
+    </table>
+    <div class="information" id="id4">
+        <p>
+            <h2 id='id'>Facts about Nitrogen</h2>
+            <ul id='id1'>
+                <li>Nitrogen plays an important role in the life of plants and animals on Earth through the nitrogen cycle.</li>
+                <li>It consists of 7 protons and 7 eletrons.</li>
+                <li>The most common element in our air is nitrogen, not oxygen. </li>
+                <li>The Earth's atmosphere is 78% nitrogen gas or N2.</li>
+                <li>The primary industrial use of nitrogen is to make ammonia</li>
+                <li>Ammonia is then used to create fertilizers, nitric acid, and explosives.</li>
+                <li>Many explosives contain nitrogen such as TNT, nitroglycerin, and gun powder.</li>
+                <li>Liquid nitrogen is very cold and will immediately freeze skin on contact causing severe damage and frostbite.</li>
+            </ul>
+        </p>
+    </div>
+    <!-- Begining the quiz -->
+    <div class="message" id="id5">
+        <p id="id2">
+            When you're ready click the button below to take a test on the information you have learnt about nitrogen. The Quiz consists of three multi choice question in which you have 10 second to answer. Best of luck!!
+        </p>
+    </div>
+
+    <!-- Creating the Quiz-->
+    <div class="quizDiv" id="quizDiv">
+        <button id="start" onclick="startQuiz()">Start Quiz!</button>
+
+        <div id="quiz" style="display: none;">
+            <div id="question"></div>
+            <div id="A" onclick="checkAnswer('A')"></div>
+            <div id="B" onclick="checkAnswer('B')"></div>
+            <div id="C" onclick="checkAnswer('C')"></div>
+            <div id="score"></div>
         </div>
-        <div class="endQuizContent" id="endQuizContent" style="display: none;">
-            <p>Congrats on Finishing this lesson on Hydrogren</p>
-            <div id="displayGrade"></div>
-            <p id="lessonshref"><a href="{{ url_for('lessons')}}">Return to lesson page</a></p>
-        </div>
-        <script src="{{ url_for('static', filename='QuizCode/quiz_nitrogen.js') }}"></script>
-    </body>
+    </div>
+    <div class="endQuizContent" id="endQuizContent" style="display: none;">
+        <p>Congrats on Finishing this lesson on Hydrogren</p>
+        <div id="displayGrade"></div>
+        <p id="lessonshref"><a href="{{ url_for('lessons')}}">Return to lesson page</a></p>
+    </div>
+    <script src="{{ url_for('static', filename='QuizCode/quiz_nitrogen.js') }}"></script>
+</body>
+
 </html>
