--- a/templates/about.html
+++ b/templates/about.html
@@ -68,7 +68,7 @@
                 <div class="container">
                     <h2>Aditi</h2>
                     <p class="title">Student at UWA</p>
-                    <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+                    <p>Volunteering at Maddington Primary School. Loves to help children.</p>
                     <p>Aditi@example.com</p>
 
                 </div>
