--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,47 +1,30 @@
-{% extends "bootstrap/base.html" %}
-{% import "bootstrap/wtf.html" as wtf %}
+{% extends "bootstrap/base.html" %} {% import "bootstrap/wtf.html" as wtf %} {% block title %} Sign Up | ElementLabs {% endblock %} {% block styles %} {{super()}}
+<meta charset="UTF-8">
+<meta name="viewpoint" content="width=device-width, initial-scale=1.0">
+<meta http-equiv="X-UA-compatible" content="ie=edge">
+<link rel="icon" href="{{ url_for('static', filename='images/favicon.PNG') }}">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+<link rel="stylesheet" href="{{ url_for('static', filename='css/login_style.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='navbar/nav_style_py.css') }}">
+<script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 
-{% block title %}
-Sign Up | ElementLabs
-{% endblock %}
-
-
-
-{% block styles %}
-{{super()}}
-    <meta charset="UTF-8">
-    <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-compatible" content="ie=edge">
-    <link rel="icon" href="{{ url_for('static', filename='images/favicon.PNG') }}">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" 
-    integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/login_style.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='navbar/nav_style_py.css') }}">
-    <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-
-    <meta name="description" content="Sign up to save your progress on our quizes">
-{% endblock %}
-
-{% block content %}
-    <div id="nav-placeholder"></div>
-    <script>
-        $(function() {
-            $("#nav-placeholder").load("{{ url_for('nav')}}");
-        });
-    </script>
+<meta name="description" content="Sign up to save your progress on our quizes"> {% endblock %} {% block content %}
+<div id="nav-placeholder"></div>
+<script>
+    $(function() {
+        $("#nav-placeholder").load("{{ url_for('nav')}}");
+    });
+</script>
 
 
-    <div class ="login-page">
-        <div class ="form">
-            <form method = 'POST'>
-                {{ form.hidden_tag() }}
-                {{ wtf.form_field(form.username) }}
-                {{ wtf.form_field(form.password) }}
-                {{ wtf.form_field(form.email) }}
+<div class="login-page">
+    <div class="form">
+        <form method='POST'>
+            {{ form.hidden_tag() }} {{ wtf.form_field(form.username) }} {{ wtf.form_field(form.password) }} {{ wtf.form_field(form.email) }}
 
-                <button class="btn btn-lg btn-primary btn-block" type="submit">Sign up</button>
-            </form>
-        </div>
+            <button class="btn btn-lg btn-primary btn-block" type="submit">Sign up</button>
+        </form>
     </div>
+</div>
 
 {% endblock %}
