--- a/templates/about.html
+++ b/templates/about.html
@@ -69,7 +69,7 @@
                     <h2>Aditi</h2>
                     <p class="title">Student at UWA</p>
                     <p>Volunteering at Maddington Primary School. Loves to help children.</p>
-                    <p>Aditi@example.com</p>
+                    <p>Aditimalu13@gmail.com</p>
 
                 </div>
             </div>
