--- a/static/css/lesson_style.css
+++ b/static/css/lesson_style.css
@@ -1,19 +1,20 @@
-body{
+body {
     background: rgba(202, 208, 214, 0.76);
 }
 
-.box{
+.box {
     padding: 40px 0px;
 }
 
-.box-part{
-    background:#FFF;
-    border-radius:0;
-    padding:60px 10px;
-    margin:30px 0px;
+.box-part {
+    background: #FFF;
+    border-radius: 0;
+    padding: 60px 10px;
+    margin: 30px 0px;
 }
-.text{
-    margin:20px 0px;
+
+.text {
+    margin: 20px 0px;
 }
 
 .icon {
@@ -21,81 +22,84 @@ body{
     height: 3rem;
 }
 
-h1{
+h1 {
     text-align: center;
 }
 
-table, td{
+table,
+td {
     border: 2px solid black;
     text-align: center;
     margin-left: auto;
     margin-right: auto;
-  }
-
-#start:hover{
-    border: 3px solid lightgreen;
-    color : blue;
 }
 
-.lessonHeader{
-    
-    background-color:cornflowerblue;
+#start:hover {
+    border: 3px solid lightgreen;
+    color: blue;
+}
+
+.lessonHeader {
+    background-color: cornflowerblue;
     padding: 15px;
     text-align: center;
     margin: 20px;
 }
 
-div.information{
-    background-color:  rgba(202, 208, 214, 0.76);
+div.information {
+    background-color: rgba(202, 208, 214, 0.76);
     margin: 20px;
     padding: 20px;
 }
 
-div.quizDiv{
+div.quizDiv {
     background-color: rgba(202, 208, 214, 0.76);
     margin: 20px;
     padding: 20px;
     text-align: center;
 }
 
-div.message{
+div.message {
     background-color: rgba(202, 208, 214, 0.76);
     margin: 20px;
     padding: 20px;
     text-align: center;
 }
 
-div.endQuizContent{
+div.endQuizContent {
     background-color: rgba(202, 208, 214, 0.76);
     margin: 20px;
     padding: 20px;
     text-align: center;
 }
 
-
-
-#question{
+#question {
     background-color: burlywood;
     margin: auto;
     padding: 10px;
 }
 
-#A,#B,#C{
-    background-color:whitesmoke;
+#A,
+#B,
+#C {
+    background-color: whitesmoke;
     margin: 20px;
     padding: 10px;
 }
 
-#A:hover,#B:hover,#C:hover{
-    background-color:greenyellow;
+#A:hover,
+#B:hover,
+#C:hover {
+    background-color: greenyellow;
     font-size: 20px;
     font-weight: bold;
 }
 
-#lessonshref{
-    padding:10px;
-    font-size:20px;
+#lessonshref {
+    padding: 10px;
+    font-size: 20px;
 }
+
 
 /* styling for the progressbar */
 
@@ -104,17 +108,17 @@ div.endQuizContent{
     margin-left: auto;
     margin-right: auto;
     padding: 20px;
-  }
+}
 
-#OutsideBar{
+#OutsideBar {
     background-color: white;
     border-style: solid;
     border-color: black;
     border-width: 1px;
 }
 
-#InsideBar{
+#InsideBar {
     width: 10%;
-    background-color: green;
+    background-color: rgb(105, 177, 105);
     text-align: center;
 }
