inserted information for the about me page

--- a/templates/about.html
+++ b/templates/about.html
@@ -43,8 +43,8 @@
                 <div class="container">
                     <h2>Joshua</h2>
                     <p class="title">Student at UWA</p>
-                    <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-                    <p>joshua@example.com</p>
+                    <p>Transfer from an American University, where I played high level volleyball for 3 years.</p>
+                    <p>jws_1998@outlook.com</p>
                 </div>
             </div>
         </div>
