--- a/templates/nitrogen.html
+++ b/templates/nitrogen.html
@@ -86,7 +86,7 @@
         </div>
     </div>
     <div class="endQuizContent" id="endQuizContent" style="display: none;">
-        <p>Congrats on Finishing this lesson on Hydrogren</p>
+        <p>Congrats on Finishing this lesson on Nitrogen</p>
         <div id="displayGrade"></div>
         <p id="lessonshref"><a href="{{ url_for('lessons')}}">Return to lesson page</a></p>
     </div>
