added some more tests

--- a/templates/Hydrogen.html
+++ b/templates/Hydrogen.html
@@ -53,8 +53,8 @@
     </table>
     <div class="information" id="id4">
         <p>
-            <h2 id='id'>Facts about Hydrogen</h2>
-            <ul id='id1'>
+            <h2 id="id">Facts about Hydrogen</h2>
+            <ul id="id1">
                 <li>Hydrogren is the lightest element on earth.</li>
                 <li>It consists of one proton and one eletron.</li>
                 <li>When Hydrogen and Oxygen come together that make water.</li>
