--- a/templates/carbon.html
+++ b/templates/carbon.html
@@ -22,7 +22,7 @@
             $("#nav-placeholder").load("{{ url_for('nav')}}");
         });
     </script>
-    <div class="lessonHeader" style=background-color:lightslategrey>
+    <div class="lessonHeader" style="background-color:lightslategrey">
         <h1><b>Carbon</b></h1>
     </div>
     <table id="id3">
@@ -53,8 +53,8 @@
     </table>
     <div class="information" id="id4">
         <p>
-            <h2 id='id'>Facts about Carbon</h2>
-            <ul id='id1'>
+            <h2 id="id">Facts about Carbon</h2>
+            <ul id="id1">
                 <li>Carbon is one of the most important elements to life on planet Earth</li>
                 <li>It consists of 6 protons and 6 eletrons.</li>
                 <li>It forms more compounds than any other element and forms the basis to all plant and animal life </li>
