--- a/templates/helium.html
+++ b/templates/helium.html
@@ -22,7 +22,7 @@
             $("#nav-placeholder").load("{{ url_for('nav')}}");
         });
     </script>
-    <div class="lessonHeader" style=background-color:khaki>
+    <div class="lessonHeader" style="background-color:khaki">
         <h1><b>Helium</b></h1>
     </div>
     <table id="id3">
@@ -53,8 +53,8 @@
     </table>
     <div class="information" id="id4">
         <p>
-            <h2 id='id'>Facts about Helium</h2>
-            <ul id='id1'>
+            <h2 id="id">Facts about Helium</h2>
+            <ul id="id1">
                 <li>Helium is the second lightest and second most common element in the universe.</li>
                 <li>It consists of 2 protons and 2 eletrons.</li>
                 <li>Helium is the only element that does not solidify under ordinary pressures and remains a liquid even at absolute zero. </li>
