--- a/templates/index.html
+++ b/templates/index.html
@@ -154,7 +154,7 @@
      <td id="Ts" title="Tennessine"><sup>117</sup>Ts</td>
      <td id="Og" title="Oganesson"><sup>118</sup>Og</td>
     </tr>
-    <tr class="spacer"><td class="empty" colspan=18></td></tr>
+    <tr class="spacer"><td class="empty" colspan="18"></td></tr>
     <tr>
      <td class="empty" colspan="2"></td>
      <td id="La" title="Lanthanum"><sup>57</sup>La</td>
