--- a/templates/iron.html
+++ b/templates/iron.html
@@ -22,7 +22,7 @@
             $("#nav-placeholder").load("{{ url_for('nav')}}");
         });
     </script>
-    <div class="lessonHeader" style=background-color:peru>
+    <div class="lessonHeader" style="background-color:peru">
         <h1><b>Iron</b></h1>
     </div>
     <table id="id3">
@@ -53,8 +53,8 @@
     </table>
     <div class="information" id="id4">
         <p>
-            <h2 id='id'>Facts about Iron</h2>
-            <ul id='id1'>
+            <h2 id="d">Facts about Iron</h2>
+            <ul id="id1">
                 <li>Iron its pure form iron is a fairly soft, grayish metal. It is very reactive and will readily corrode or rust.</li>
                 <li>It consists of 26 protons and 26 eletrons.</li>
                 <li>Iron is the most naturally magnetic of the elements.</li>
