--- a/templates/nitrogen.html
+++ b/templates/nitrogen.html
@@ -22,7 +22,7 @@
             $("#nav-placeholder").load("{{ url_for('nav')}}");
         });
     </script>
-    <div class="lessonHeader" style=background-color:rosybrown>
+    <div class="lessonHeader" style="background-color:rosybrown">
         <h1><b>Nitrogen</b></h1>
     </div>
     <table id="id3">
@@ -53,8 +53,8 @@
     </table>
     <div class="information" id="id4">
         <p>
-            <h2 id='id'>Facts about Nitrogen</h2>
-            <ul id='id1'>
+            <h2 id="id">Facts about Nitrogen</h2>
+            <ul id="id1">
                 <li>Nitrogen plays an important role in the life of plants and animals on Earth through the nitrogen cycle.</li>
                 <li>It consists of 7 protons and 7 eletrons.</li>
                 <li>The most common element in our air is nitrogen, not oxygen. </li>
