--- a/templates/oxygen.html
+++ b/templates/oxygen.html
@@ -22,7 +22,7 @@
             $("#nav-placeholder").load("{{ url_for('nav')}}");
         });
     </script>
-    <div class="lessonHeader" style=background-color:mediumseagreen>
+    <div class="lessonHeader" style="background-color:mediumseagreen">
         <h1><b>Oxygen</b></h1>
     </div>
     <table id="id3">
@@ -53,8 +53,8 @@
     </table>
     <div class="information" id="id4">
         <p>
-            <h2 id='id'>Facts about Oxygen</h2>
-            <ul id='id1'>
+            <h2 id="id">Facts about Oxygen</h2>
+            <ul id="id1">
                 <li>Oxygen is an important element that is needed by most life forms on Earth to survive</li>
                 <li>It consists of 8 protons and 8 eletrons.</li>
                 <li>When Hydrogren and Oxygen come together that make water.</li>
