--- a/templates/profile.html
+++ b/templates/profile.html
@@ -44,6 +44,7 @@
             <p><b>Nitrogen Quiz Results</b>:{{nitrogen}}% </p>
             <p style="font-size: 20px;"><b>Congratulations on trying out the quizzes! Try to achieve 100 in all!</b> </p>
         </div>
+    </div>
 </body>
 
 </html>
