--- a/templates/lessonsLoggedin.html
+++ b/templates/lessonsLoggedin.html
@@ -27,6 +27,8 @@
 
     <div id="Progress">
         <h1>Progress Bar</h1>
+        <p style="text-align: center;">To look at your results for each of the quizes click on your username in the top right hand corner of the navigation bar. 
+            This will take you to your profile page that has all your results</p>
         <div id="OutsideBar">
             <div id="InsideBar"></div>
         </div>
