updated my about info

--- a/templates/about.html
+++ b/templates/about.html
@@ -55,8 +55,8 @@
                 <div class="container">
                     <h2>Victor</h2>
                     <p class="title">Student at UWA</p>
-                    <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-                    <p>Victor@example.com</p>
+                    <p>Second year at UWA enjoy computer science, and active sports such as surfing and skating.</p>
+                    <p>https://github.com/vwojcieski</p>
 
                 </div>
             </div>
